Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110358

DrawMode is incorrect in Surface3D if resources are bundled

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.0, 6.6.0
    • 6.5.0 Beta1
    • Data Visualization
    • None
    • 5933f55a5 (dev), e9e49410f (6.5)

    Description

      When adding QML resources bundled using qt_add_qml_module, Surface3DSeries gets a wrong drawMode, even if the drawMode is explicitly set in the series.

      Easily reproducible by cherry-picking (until it's merged) this and it's dependencies from the relation chain: QTBUG-110329

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes