Fix invalid drawMode

Q_ENUM is now required for flags to work correctly from QML. Added
the missing definitions.

Fixes: QTBUG-110358
Change-Id: Ifde893a33a5b43c26f51b0c97883458462376be6
Reviewed-by: Sami Varanka <sami.varanka@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 5933f55a52bec88d4fe3222418abb1d5b6d1f6d1)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>